infra/mongo/mongo-db-client-deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongo-data-client
  namespace: ip
spec:
  replicas: 1
  selector:
    matchLabels:
      component: mongo-data-client
  template:
    metadata:
      labels:
        component: mongo-data-client
    spec:
      containers:
        - name: mongo-data-client
          image: mongo-express:0.54
