infra/mongo/mongo-db-client-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongo-data-client
  namespace: ip
spec:
  type: ClusterIP
  selector:
    component: mongo-data-client
  ports:
    - port: 80
      targetPort: 8084
